--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "api-caller",
-  "version": "0.0.0",
+  "name": "call-api",
+  "version": "0.0.1",
+  "author": "Dale Seo <dale.seo@gmail.com>",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
